--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
-
+    background-color: #333;
     color: #333;
-
+    box-sizing: border-box;
     text-align: center;
 
     font-family: Arial, Helvetica, sans-serif;
@@ -17,6 +17,7 @@ body{
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+    box-sizing: border-box;
 }
 
 #cabecera #tagline{
@@ -26,6 +27,7 @@ body{
 }
 
 #container{
+    background-color: aliceblue;
     width: 70%;
     padding: 1em;
     text-align: left;
@@ -35,4 +37,10 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#cabecera img{
+    width: 30px;
+    vertical-align: middle;
+    margin:5px 10px;
 }
