--- a/estilos.css
+++ b/estilos.css
@@ -33,3 +33,10 @@ body{
 #container h1{
     font-size: 20px;
 }
+
+#footer{
+    background-color: rgb(104, 104, 104);
+    color: aliceblue;
+    text-align: center;
+    padding: 20px;
+}
